(library 
    (name Tests) 
    (public_name reason-conf-examples.test)
    (libraries reason-conf-examples.library rely.lib) 
    (flags -linkall -g)
    (modules :standard \ RunReasonConfExamplesTests)
) 
(executable
    (name RunReasonConfExamplesTests)
    (public_name RunReasonConfExamplesTests.exe)
    (libraries
        reason-conf-examples.test
    )
    (modules RunReasonConfExamplesTests)
)
